--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+
+    <title><Homework-12></title>
   </head>
   <body>
-    <load ="partials/header.html" />
+    <div class="header">
+      <form class="search-form">
+        <div class="form-input">
+          <input type="text" class="form-control" name="query" />
+        </div>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+        <button type="submit" class="btn">Search</button>
+      </form>
+    </div>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <ul class="gallery"></ul>
 
+    <div>
+      <button type="button" class="btn" data-action="load-more">
+        <span class="label"> Load more </span>
+      </button>
+
+      <span class="loader" role="status" aria-hidden="true"></span>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
