--- a/src/index.html
+++ b/src/index.html
@@ -2,32 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
 
-    <title><Homework-12></title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Homework-12</title>
   </head>
   <body>
-    <div class="header">
-      <form class="search-form">
-        <div class="form-input">
-          <input type="text" class="form-control" name="query" />
-        </div>
-
+    <div>
+      <form class="form">
+        <input type="text" placeholder="Search images..." />
         <button type="submit" class="btn">Search</button>
       </form>
-    </div>
 
-    <ul class="gallery"></ul>
+      <ul class="gallery"></ul>
 
-    <div>
-      <button type="button" class="btn" data-action="load-more">
-        <span class="label"> Load more </span>
+      <button type="button" class="btn btn-load" style="display: none">
+        Load more
       </button>
-
-      <span class="loader" role="status" aria-hidden="true"></span>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
